# bootcamp

./: pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: admin.readonly.group.yaml  data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
