[tool.poetry]
name = "bootcamp"
version = "0.1.0"
description = ""
authors = ["Fredrik Nestvold Larsen <59914223+Nestvold@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cognite-toolkit = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
